--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -15,20 +15,21 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Install dotnet
-      uses: actions/setup-dotnet@v1
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
 
-    - name: Restore packages
+    - name: Restore dependencies
       run: dotnet restore ${{ env.PROJECT_PATH }}
     
-    - name: Build project
+    - name: Build
       run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
-
+    
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
+          
     - name: Get Version
       id: version
       uses: battila7/get-version-action@v2
