--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   PROJECT_PATH: src/InfinityComparable.csproj
-  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
+  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}/output
   NUGET_SOURCE_URL: https://api.nuget.org/v3/index.json
 
 jobs:
