--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   PROJECT_PATH: src/InfinityComparable.csproj
+  TEST_PATH: test/InfinityComparable.tests.csproj
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}/output
   NUGET_SOURCE_URL: https://api.nuget.org/v3/index.json
 
@@ -28,7 +29,7 @@ jobs:
       run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
 
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test ${{ env.TEST_PATH }} --no-build --verbosity normal
           
     - name: Get Version
       id: version
