--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   PROJECT_PATH: src/InfinityComparable.csproj
-  TEST_PATH: test/InfinityComparable.tests.csproj
+  TEST_PATH: test/InfinityComparable.Tests.csproj
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}/output
   NUGET_SOURCE_URL: https://api.nuget.org/v3/index.json
 
