--- a/test/InfinityComparable.Tests/InfinityComparable.Tests.csproj
+++ b/test/InfinityComparable.Tests/InfinityComparable.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\InfinityComparable.csproj" />
+    <ProjectReference Include="..\..\src\InfinityComparable\InfinityComparable.csproj" />
   </ItemGroup>
 
 </Project>
